<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bground"
    android:id="@+id/relative_layout" tools:context=".MainActivity">

    <Button
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnNew"
        android:text="@string/new_game"/>

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:columnCount="2"
        android:rowCount="3"
        android:id="@+id/grid_top_level">

        <TextView
            android:layout_column="0"
            android:layout_row="0"
            android:layout_columnSpan="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblTitle"
            android:text="@string/lbl_header_line_1"/>

        <TextView
            android:layout_column="0"
            android:layout_row="1"
            android:layout_columnSpan="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblAttempts"
            android:text="@string/lbl_header_line_2"/>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:id="@+id/grid_layout">

        </GridLayout>

    </GridLayout>

</RelativeLayout>
